query helper adds where conditions