@@ -1,12 +1,10 @@
 package com.cgm.infolab.db.repository;
 
-import com.cgm.infolab.db.model.ChatMessageEntity;
 import com.cgm.infolab.db.model.Username;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
 
 import java.util.List;
-import java.util.function.Function;
 
 public class UserQueryHelper {
     private final JdbcTemplate jdbcTemplate;
@@ -21,10 +19,8 @@ public class UserQueryHelper {
         return null;
     }
 
-    public String query(String initialQuery) {
-        return initialQuery + " from infolab.rooms r " +
-            "left join infolab.rooms_subscriptions s on r.id = s.room_id " +
-            "left join infolab.users u on u.id = s.user_id " +
-            String.format("where (u.username = '%s' or r.visibility='PUBLIC')", username.value());
+    public UserQueryResult query(String initialQuery) {
+        String query = "%s from ".formatted(initialQuery);
+        return new UserQueryResult(username, query);
     }
 }
